--- a/parfait/components/toolbar.css
+++ b/parfait/components/toolbar.css
@@ -221,10 +221,10 @@ toolbar .toolbarbutton-1:not(#PlacesChevron, .toolbarbutton-combined-buttons-dro
   #PersonalToolbar {
     position: fixed;
     bottom: calc(0px - var(--pf-bookmarks-height));
+    right: var(--pf-separation);
     z-index: 3;
-    width: calc(100% - (var(--pf-bookmarks-margin) + (var(--pf-separation) * 2)));
+    width: calc(100% - var(--pf-bookmarks-margin));
     height: var(--pf-bookmarks-height);
-    margin-left: var(--pf-bookmarks-margin);
     padding: 4px !important;
     background-color: var(--pf-panel-bgcolor) !important;
     border: 1px solid var(--pf-border-color) !important;
@@ -234,10 +234,7 @@ toolbar .toolbarbutton-1:not(#PlacesChevron, .toolbarbutton-combined-buttons-dro
     opacity: 0;
     transition: var(--pf-ts-25) !important;
     transition-delay: var(--pf-ts-25) !important;
-
-    @media -moz-pref("parfait.window.borderless") {
-      width: calc(100% - (var(--pf-bookmarks-margin) + var(--pf-separation)));
-    }
+    
     &:hover,
     &:has(.bookmark-item[open]) {
       opacity: 1;
